fix: minor fix product response